<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_color"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:contentInsetLeft="0dp"
            android:paddingTop="@dimen/toolbar_padding_top"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:visibility="invisible"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/back_click_bg"
                android:src="@mipmap/back" />

            <TextView
                android:id="@+id/title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/mine"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:padding="14dp"
                android:id="@+id/tool"
                android:src="@mipmap/tool"
                android:layout_marginRight="10dp"
                android:layout_gravity="right"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                tools:ignore="RtlHardcoded" />


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:background="@drawable/mine_bg_ripple_bg"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_40">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/headImg"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_20"
                android:src="@mipmap/headimg" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_weight="1"
                android:paddingStart="@dimen/dp_8"
                android:paddingEnd="0dp"
                android:text="Smile"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:paddingEnd="@dimen/dp_10"
                android:text="@string/my_info"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_14"
            android:paddingBottom="@dimen/dp_14">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/my_send_but"
                style="@style/DefaultClientBG"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:src="@mipmap/paper_air"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/DefaultTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:text="发布"
                    android:textAlignment="center"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon1"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/my_order_but"
                style="@style/DefaultClientBG"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:src="@mipmap/my_order"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/DefaultTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:text="钱包"
                    android:textAlignment="center"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon2"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/my_welfare_but"
                style="@style/DefaultClientBG"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:src="@mipmap/gife"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/DefaultTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:text="福利"
                    android:textAlignment="center"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon3"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/sys_info_tv"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_ripple_bg"
            android:drawableStart="@mipmap/ling"
            android:drawableEnd="@mipmap/right"
            android:drawablePadding="@dimen/dp_8"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_8"
            android:paddingStart="@dimen/dp_16"
            android:text="@string/system_info"
            tools:ignore="RtlSymmetry" />

        <View style="@style/LinePoint05" />

        <TextView
            android:id="@+id/my_share_tv"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_ripple_bg"
            android:drawableStart="@mipmap/share"
            android:drawableEnd="@mipmap/right"
            android:drawablePadding="@dimen/dp_8"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_8"
            android:paddingStart="@dimen/dp_16"
            android:paddingLeft="@dimen/dp_16"
            android:text="@string/my_share"
            tools:ignore="RtlSymmetry" />

        <View style="@style/LinePoint05" />


    </LinearLayout>

</FrameLayout>